fix word break on a tag

--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -1,5 +1,9 @@
 $button-transition-speed: 200ms;
 
+a {
+    word-break: break-all;
+}
+
 button {
     background: none;
     border: none;
